<resources>
    <string name="app_name">Eorzea Companion</string>
    <string name="action_gathering">Gathering</string>
    <string name="action_vistas">Vistas</string>
    <string name="action_about">About</string>
    <string name="btnClose">Close</string>
    <string name="txtEmote">Emote : </string>
    <string name="eorzea_time_short">ET</string>
    <string name="about_text">
        &lt;center&gt;
            &lt;big&gt;&lt;b&gt;Eorzea Companion&lt;/b&gt;&lt;/big&gt;
            &lt;br/&gt;\n
            &lt;br/&gt;\n
            Copyright &#169; Blackfich 2015
        &lt;/center&gt;
        &lt;br/&gt;\n
        &lt;br/&gt;\n
        This application is free of use.
        &lt;br/&gt;\n
        &lt;br/&gt;\n
        All graphics such as item icons, screenshots, etc belong to their rightful owners.
        &lt;br/&gt;\n
        &lt;br/&gt;\n
        FINAL FANTASY XIV &#169; 2010-2015 SQUARE ENIX CO., LTD. All Rights Reserved.
        &lt;br/&gt;\n
        &lt;br/&gt;\n
        FINAL FANTASY is a registered trademark of Square Enix Holdings Co., Ltd.
    </string>
    <string name="hint_long_click_button_for_hint">Long click a button for hint</string>
    <string name="btn_filters">Filters</string>
    <string name="btn_gathering">Gathering</string>
    <string name="btn_vistas">Vistas</string>
    <string name="btn_cards">Cards</string>
    <string name="btn_minions">Minions</string>
    <string name="btn_mounts">Mounts</string>
    <string name="btn_about">About</string>
    <string name="item_slot_level">Lv. </string>
    <string name="item_slot_nothing">Nothing</string>
    <string name="item_hidden">hidden</string>
    <string name="item_variable_slot">variable slot</string>
    <string name="txt_gathering_filters">Gathering filters</string>
    <string name="txt_filter_category">Type</string>
    <string name="txt_filter_version">Version</string>
    <string name="txt_filter_type">Rarity</string>
    <string name="txt_filter_time">Time</string>
    <string name="hint_imgFilterBotanist">Show/hide botanist\'s nodes</string>
    <string name="hint_imgFilterMiner">Show/hide miner\'s nodes</string>
    <string name="hint_imgFilterFisher">Show/hide fisher\'s nodes</string>
    <string name="hint_imgFilterARR">Show/hide ARR\'s nodes</string>
    <string name="hint_imgFilterHW">Show/hide HW\'s nodes</string>
    <string name="hint_imgFilterUnspoiled">Show/hide unspoiled nodes</string>
    <string name="hint_imgFilterEphemeral">Show/hide ephemeral nodes</string>
    <string name="hint_imgFilterFolklore">Show/hide folklore nodes</string>
    <string name="hint_imgFilterTime">Either show all nodes or restrict to currently or soon open ones</string>
    <string name="old_gridania">Old Gridania</string>
    <string name="new_gridania">New Gridania</string>
    <string name="east_shroud">East Shroud</string>
    <string name="south_shroud">Shouth Shroud</string>
    <string name="north_shroud">North Shroud</string>
    <string name="central_shroud">Central Shroud</string>
    <string name="limsa_lominsa_upper_decks">Limsa Lominsa - Upper Decks</string>
    <string name="limsa_lominsa_lower_decks">Limsa Lominsa - Lower Decks</string>
    <string name="middle_la_noscea">Middle La Noscea</string>
    <string name="eastern_la_noscea">Eastern La Noscea</string>
    <string name="lower_la_noscea">Lower La Noscea</string>
    <string name="outer_la_noscea">Outter La Noscea</string>
    <string name="upper_la_noscea">Upper La Noscea</string>
    <string name="western_la_noscea">Western La Noscea</string>
    <string name="uldah_steps_of_thal">Ul\'dah - Steps of Thal</string>
    <string name="uldah_steps_of_nald">Ul\'dah - Steps of Nald</string>
    <string name="northern_thanalan">Northern Thanalan</string>
    <string name="western_thanalan">Western Thanalan</string>
    <string name="eastern_thanalan">Eastern Thanalan</string>
    <string name="southern_thanalan">Southern Thanalan</string>
    <string name="central_thanalan">Central Thanalan</string>
    <string name="mor_dhona">Mor Dhona</string>
    <string name="central_coerthas">Central Coerthas Highlands</string>
    <string name="western_coerthas">Western Coerthas Highlands</string>
    <string name="azys_lla">Azys Lla</string>
    <string name="dravanian_forelands">Dravanian Forelands</string>
    <string name="dravanian_hinterlands">Dravanian Hinterlands</string>
    <string name="sea_of_clouds">Sea of Clouds</string>
    <string name="churning_mists">Churning Mists</string>
    <string name="botanist">Botanist</string>
    <string name="miner">Miner</string>
    <string name="fisher">Fisher</string>
    <string name="emote_comfort">comfort</string>
    <string name="emote_kneel">kneel</string>
    <string name="emote_lookout">lookout</string>
    <string name="emote_pray">pray</string>
    <string name="emote_psych">psych</string>
    <string name="emote_salute">salute</string>
    <string name="emote_sit">sit</string>
    <string name="weather_clear">clear</string>
    <string name="weather_cloudy">cloudy</string>
    <string name="weather_duststorm">duststorm</string>
    <string name="weather_fair">fair</string>
    <string name="weather_fog">fog</string>
    <string name="weather_gales">gales</string>
    <string name="weather_heatwave">heatwave</string>
    <string name="weather_rain">rain</string>
    <string name="weather_thunderstorm">thunderstorm</string>
    <string name="abalathian_mistletoe">Abalathian Mistletoe</string>
    <string name="abalathian_rock_salt">Abalathian Rock Salt</string>
    <string name="adamantite_ore">Adamantite Ore</string>
    <string name="antumbral_rock">Antumbral Rock</string>
    <string name="apricot">Apricot</string>
    <string name="astral_moraine">Astral Moraine</string>
    <string name="astral_rock">Astral Rock</string>
    <string name="aurum_regis_ore">Aurum Regis Ore</string>
    <string name="bamboo_stick">Bamboo Stick</string>
    <string name="black_soil">Black Soil</string>
    <string name="black_truffle">Black Truffle</string>
    <string name="blood_orange">Blood Orange</string>
    <string name="blue_quartz">Blue Quartz</string>
    <string name="bright_fire_rock">Bright Fire Rrock</string>
    <string name="bright_lightning_rock">Bright Lightning Rock</string>
    <string name="chalcocite">Chalcocite</string>
    <string name="chives">Chives</string>
    <string name="chysahl_greens">Chysahl Greens</string>
    <string name="cloud_banana">Cloud Banana</string>
    <string name="clary_sage">Clary Sage</string>
    <string name="coblyn_larva">Coblyn Larva</string>
    <string name="coerthan_tea_leaves">Coerthan Tea Leaves</string>
    <string name="cuprite">Cuprite</string>
    <string name="cypress_log">Cypress Log</string>
    <string name="darksteel_ore">Darksteel Ore</string>
    <string name="dravanian_mistletoe">Dravanian Mistletoe</string>
    <string name="dravanian_paprika">Dravanian Paprika</string>
    <string name="dzemael_tomato">Dzemael Tomato</string>
    <string name="earth_cluster">Earth Cluster</string>
    <string name="ebony_log">Ebony Log</string>
    <string name="ferberite">Ferberite</string>
    <string name="fire_cluster">Fire Cluster</string>
    <string name="fire_moraine">Fire Moraine</string>
    <string name="fragrant_log">Fragrant Log</string>
    <string name="furymint">Fury Mint</string>
    <string name="gold_ore">Gold Ore</string>
    <string name="gold_sand">Gold Sand</string>
    <string name="grade_3_la_noscean_topsoil">Grade 3 La Noscean Topsoil</string>
    <string name="grade_3_shroud_topsoil">Grade 3 Shroud Topsoil</string>
    <string name="grade_3_thanalan_topsoil">Grade 3 Thanalan Topsoil</string>
    <string name="grade_4_carbonized_matter">Grade 4 Carbonized Matter</string>
    <string name="granular_clay">Granular Clay</string>
    <string name="green_quartz">Green Quartz</string>
    <string name="gregarious_worm">Gregarious Worm</string>
    <string name="heavens_lemon">Heavens Lemon</string>
    <string name="highland_oregano">Highland Oregano</string>
    <string name="honey_lemon">Honey Lemon</string>
    <string name="honeydew_almonds">Honeydew Almonds</string>
    <string name="ice_cluster">Ice Cluster</string>
    <string name="kidragora">Kidragora</string>
    <string name="la_noscean_leek">La Noscean Leek</string>
    <string name="light_kidney_ore">Light Kidney Ore</string>
    <string name="lightning_cluster">Lightning Cluster</string>
    <string name="lightning_moraine">Lightning Moraine</string>
    <string name="limonite">Limonite</string>
    <string name="mazlaya_greens">Mazlaya Greens</string>
    <string name="morel">Morel</string>
    <string name="native_gold">Native Gold</string>
    <string name="old_world_fig">Old World Fig</string>
    <string name="pearl_sprouts">Pearl Sprouts</string>
    <string name="peat_moss">Peat Moss</string>
    <string name="platinum_ore">Platinum Ore</string>
    <string name="porcini">Porcini</string>
    <string name="prickly_pineapple">Prickly Pineapple</string>
    <string name="pumice">Pumice</string>
    <string name="pyrite">Pyrite</string>
    <string name="radiant_fire_moraine">Radiant Fire Moraine</string>
    <string name="radiant_lightning_moraine">Radiant Lightning Moraine</string>
    <string name="raw_diamond">Raw Diamond</string>
    <string name="raw_emerald">Raw Emerald</string>
    <string name="raw_iolite">Raw Iolite</string>
    <string name="raw_ruby">Raw Ruby</string>
    <string name="raw_sapphire">Raw Sapphire</string>
    <string name="raw_topaz">Raw Topaz</string>
    <string name="red_alumen">Red Alumen</string>
    <string name="red_quartz">Red Quartz</string>
    <string name="redolent_log">Redolent Log</string>
    <string name="rosemary">Rosemary</string>
    <string name="scarlet_sap">Scarlet Sap</string>
    <string name="seventh_heaven">Seventh Heaven</string>
    <string name="shroud_tea_leaves">Shroud Tea Leaves</string>
    <string name="silkworm_cocoon">Silkworm Cocoon</string>
    <string name="snurbleberry">Snurbleberry</string>
    <string name="spruce_log">Spruce Log</string>
    <string name="sun_mica">Sun Mica</string>
    <string name="thavnairian_mistletoe">Thavnairian Mistletoe</string>
    <string name="trillium">Trillium</string>
    <string name="trillium_bulb">Trillium Bulb</string>
    <string name="umbral_rock">Umbral Rock</string>
    <string name="vampire_plant">Vampire Plant</string>
    <string name="vanilla_beans">Vanilla Beans</string>
    <string name="violet_quartz">Violet Quartz</string>
    <string name="virgin_basilisk_egg">Virgin Basilisk Egg</string>
    <string name="volcanic_rock_salt">Volcanic Rock Salt</string>
    <string name="water_cluster">Water Cluster</string>
    <string name="waterfowl_feather">Waterfowl Feather</string>
    <string name="wattle_bark">Wattle Bark</string>
    <string name="wind_cluster">Wind Cluster</string>
    <string name="yellow_copper_ore">Yellow Copper Ore</string>
    <string name="yellow_quartz">Yellow Quartz</string>
    <string name="young_cieldalaes_spinach">Young Cieldalaes Spinach</string>
    <string name="vista_2_1_name">Barracuda Piers</string>
    <string name="vista_2_1_hint">Located northwest out of The Bismark, there are two sets of bricks set into the wall there. The western set of bricks is the Vista location.</string>
    <string name="vista_2_2_name">The Astalicia</string>
    <string name="vista_2_2_hint">Climb to the top of The Astalicia (the ship there), and go east towards the bow of the ship. Climb the pole extending from the ship and go to the very tip.</string>
    <string name="vista_2_3_name">Seasong Grotto</string>
    <string name="vista_2_3_hint">In the Seasong Grotto, by the entrance.</string>
    <string name="vista_2_4_name">The Skylift</string>
    <string name="vista_2_4_hint">By the Skylift, overlooking the pier.</string>
    <string name="vista_2_5_name">La Thagran Eastroad</string>
</resources>